fixed MobileNav collapse onclick issue

--- a/src/assets/styles/agency.scss
+++ b/src/assets/styles/agency.scss
@@ -21,8 +21,7 @@
     @include media ("screen", "<=phone") {
         width: 100vw;
         height: 100%;
-        margin-top: 8.5rem;
-        margin-bottom: 3rem;
+        margin: 4rem 0;
     }
 
    .experts{
@@ -50,7 +49,7 @@
         @include media ("screen", "<=phone") {
             font-size: 10.8vw;
             letter-spacing: 2px;
-            line-height: 3rem;
+            line-height: 150%
         }
     }
    }
