--- a/src/assets/styles/pages.scss
+++ b/src/assets/styles/pages.scss
@@ -86,8 +86,6 @@
   justify-content: flex-start;
   align-items: center;
   align-self: center;
-  background-color: inherit;
-
 
   @include media ("screen", "<=phone") {
     height: 105vh;
